--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.9,<3.14"
-dependencies = [
-    "pyside6 (>=6.9.0,<7.0.0)"
-]
 
+requires-python = ">=3.9,<3.14" # Mantenemos la compatibilidad
+
+dependencies = [
+    "PySide6>=6.9.0,<7.0.0",
+    "appdirs>=1.4.4,<2.0.0",   # Añadido para gestión de directorios de config
+    "sounddevice (>=0.5.1,<0.6.0)",
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
