Actualiza scripts, módulos core y GUI, y agrega archivos y tests nuevos

--- a/packaging/linux/capturador-audio-video.desktop
+++ b/packaging/linux/capturador-audio-video.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Capturador de Audio y Video
 Comment=Grabador de pantalla con audio del sistema y micrófono
-Exec=/usr/bin/env python3 PATHDIR/grabar_pantalla.py
+Exec=bash -c "cd PATHDIR && python3 PATHDIR/grabar_pantalla.py"
 Icon=recorder
 Terminal=false
 Categories=AudioVideo;Recorder;Utility;
